fixed login issue where page is stuck on refresh right after login due to not resolving cookie fast enough

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -3,7 +3,6 @@
     width: 5vw;
     height: 100vh;
     background-color: rgb(14, 13, 13);
-    border-right: 0.1vw solid #e5e7eb;
     display: flex;
     flex-direction: column;
     align-items: center;
